--- a/references.bib
+++ b/references.bib
@@ -198,3 +198,31 @@
   title = {Fusobacterium nucleatum and colorectal cancer: A review},
   journal = {World Journal of Gastrointestinal Oncology}
 }
+
+@article{Nejman2020,
+  doi = {10.1126/science.aay9189},
+  url = {https://doi.org/10.1126/science.aay9189},
+  year = {2020},
+  month = may,
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+  volume = {368},
+  number = {6494},
+  pages = {973--980},
+  author = {Deborah Nejman and Ilana Livyatan and Garold Fuks and Nancy Gavert and Yaara Zwang and Leore T. Geller and Aviva Rotter-Maskowitz and Roi Weiser and Giuseppe Mallel and Elinor Gigi and Arnon Meltser and Gavin M. Douglas and Iris Kamer and Vancheswaran Gopalakrishnan and Tali Dadosh and Smadar Levin-Zaidman and Sofia Avnet and Tehila Atlan and Zachary A. Cooper and Reetakshi Arora and Alexandria P. Cogdill and Md Abdul Wadud Khan and Gabriel Ologun and Yuval Bussi and Adina Weinberger and Maya Lotan-Pompan and Ofra Golani and Gili Perry and Merav Rokah and Keren Bahar-Shany and Elisa A. Rozeman and Christian U. Blank and Anat Ronai and Ron Shaoul and Amnon Amit and Tatiana Dorfman and Ran Kremer and Zvi R. Cohen and Sagi Harnof and Tali Siegal and Einav Yehuda-Shnaidman and Einav Nili Gal-Yam and Hagit Shapira and Nicola Baldini and Morgan G. I. Langille and Alon Ben-Nun and Bella Kaufman and Aviram Nissan and Talia Golan and Maya Dadiani and Keren Levanon and Jair Bar and Shlomit Yust-Katz and Iris Barshack and Daniel S. Peeper and Dan J. Raz and Eran Segal and Jennifer A. Wargo and Judith Sandbank and Noam Shental and Ravid Straussman},
+  title = {The human tumor microbiome is composed of tumor type{\textendash}specific intracellular bacteria},
+  journal = {Science}
+}
+
+@article{Poore2020,
+  doi = {10.1038/s41586-020-2095-1},
+  url = {https://doi.org/10.1038/s41586-020-2095-1},
+  year = {2020},
+  month = mar,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {579},
+  number = {7800},
+  pages = {567--574},
+  author = {Gregory D. Poore and Evguenia Kopylova and Qiyun Zhu and Carolina Carpenter and Serena Fraraccio and Stephen Wandro and Tomasz Kosciolek and Stefan Janssen and Jessica Metcalf and Se Jin Song and Jad Kanbar and Sandrine Miller-Montgomery and Robert Heaton and Rana Mckay and Sandip Pravin Patel and Austin D. Swafford and Rob Knight},
+  title = {Microbiome analyses of blood and tissues suggest cancer diagnostic approach},
+  journal = {Nature}
+}
